# plant-requirements-agent

./: MANIFEST.in  README.md  alchemy_out.json  example.json  fwp_reqs.json  out.json  pyproject.toml
nucsys_agent/: __init__.py  cli.py  config.py  conversation.py  exceptions.py  export_validation.py  logging_config.py  models.py  ontology.py  optimizer.py  server.py  spec_parser.py  validator.py  workflow.py
nucsys_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nucsys_agent/audit/: __init__.py  engine.py  knowledge.py
nucsys_agent/data/: ontology.yaml
nucsys_agent/data/cards/: bop_rankine_simple.yaml  primary_loop_pwr.yaml
nucsys_agent/llm/: __init__.py  anthropic_client.py  openai_client.py
nucsys_agent/rag/: card_validation.py  store.py
nucsys_agent/requirements/: applicability.py  bridge.py  conversation.py  filter.py  loader.py
nucsys_agent/schemas/: alchemy_export.schema.json
nucsys_agent/serializer/: alchemy.py
nucsys_agent/sizing/: hydraulics.py  properties.py  rankine.py  thermo.py
nucsys_agent/visualization/: __init__.py  sld.py  symbols.py
streamlit_app/: app.py
tests/: test_chat_endpoint.py  test_conversation.py  test_primary_loop.py  test_requirements.py
